2009-01-25 23:42  jannis

	* NEWS, configure.ac.in, po/ChangeLog, po/fi.po:
	  == 4.5.99.1 released! == Bump version number, update NEWS file
	  and translation files for the release.

2009-01-25 23:39  majkl

	* po/ChangeLog, po/cs.po:
	  Czech translation updated

2009-01-25 23:19  jannis

	* po/POTFILES.in:
	  Add xfce-randr-legacy.c to POTFILES.in.

2009-01-25 21:32  jari

	* po/ChangeLog, po/fi.po:
	  Update Finnish translations.

2009-01-25 20:51  omaciel

	* po/ChangeLog, po/pt_BR.po:
	  Updated Brazilian Portuguese translation.

2009-01-25 19:51  nick

	* NEWS, dialogs/appearance-settings/main.c,
	  dialogs/display-settings/main.c,
	  dialogs/display-settings/xfce-randr-legacy.c,
	  dialogs/display-settings/xfce-randr-legacy.h,
	  dialogs/display-settings/xfce-randr.c,
	  dialogs/display-settings/xfce-randr.h,
	  dialogs/keyboard-settings/command-dialog.c, po/ca.po, po/cs.po,
	  po/da.po, po/de.po, po/el.po, po/es.po, po/eu.po, po/fi.po,
	  po/fr.po, po/hu.po, po/id.po, po/ja.po, po/nb.po, po/nl.po,
	  po/pt_BR.po, po/sv.po, po/tr.po, po/uk.po, po/xfce4-settings.pot,
	  po/zh_CN.po, xfce4-settings-manager/xfce-text-renderer.c:
	  - Check if the randr extension is available (bug #4836). - Merge
	  new strings. - Fixed some compiler warnings.

2009-01-25 14:33  jari

	* po/ChangeLog, po/fi.po:
	  Update Finnish translations.

2009-01-25 14:04  nick

	* xfce4-settings-helper/workspaces.c:
	  Set the workspace names through wnck, merge code and fix bug
	  #4853.

2009-01-25 11:03  nick

	* xfce4-settings-helper/displays.c:
	  Check for the RANDR extension when starting the display module
	  and print some (untranslated) warnings to the console if the
	  display settings won't be applied because of a missing/old randr
	  extension.

2009-01-23 21:34  mmassonnet

	* po/ChangeLog, po/fr.po:
	  Updated French translation

2009-01-23 15:36  pko

	* po/ChangeLog, po/da.po:
	  * da.po: Danish translation update (Per Kongstad) * da.po: Danish