@@ -1,3 +1,9 @@
+2009-02-07	jannis
+
+	* dialogs/keyboard-settings/xfce-keyboard-settings.c: Add the new 
+	  parameter required for the API change for xfce_shortcut_dialog_run(), 
+	  configure.ac.in: Add dependecy on libxfce4kbd_private revision.
+
 2009-01-25 23:42  jannis
 
 	* NEWS, configure.ac.in, po/ChangeLog, po/fi.po:
